[gd_scene load_steps=24 format=3 uid="uid://ch71qctv32dyg"]

[ext_resource type="Script" uid="uid://dff0uyuivjgfv" path="res://Scripts/level_two.gd" id="1_s6q77"]
[ext_resource type="Script" uid="uid://djmx8f62hukcb" path="res://Scripts/dialog.gd" id="2_p6fu4"]
[ext_resource type="Resource" uid="uid://dd8xfdvo3rqhm" path="res://Resources/Dialog2_1.tres" id="2_qflm4"]
[ext_resource type="Resource" uid="uid://btgfk1oxmiell" path="res://Resources/Dialog2_2.tres" id="3_1oyir"]
[ext_resource type="Resource" uid="uid://dkl5mbylmnawj" path="res://Resources/Dialog2_3.tres" id="4_oj4o2"]
[ext_resource type="PackedScene" uid="uid://dlm318ya0bs05" path="res://Scenes/Environment/portal.tscn" id="5_17kw3"]
[ext_resource type="Resource" uid="uid://du2t1rbww4tkt" path="res://Resources/Dialog2_4.tres" id="5_85ots"]
[ext_resource type="PackedScene" uid="uid://c4yy6byn12tbr" path="res://Scenes/Enemy/tenticle.tscn" id="6_dbtem"]
[ext_resource type="Resource" uid="uid://b2wt5gbwgeh18" path="res://Resources/Dialog2_5.tres" id="6_rx32c"]
[ext_resource type="PackedScene" uid="uid://coeceae30b66w" path="res://Scenes/Player/crawler.tscn" id="6_yor8s"]
[ext_resource type="Resource" uid="uid://bnk2emu4o10fa" path="res://Resources/Dialog2_6.tres" id="7_hftt2"]
[ext_resource type="PackedScene" uid="uid://bumt3b3xb68p" path="res://Scenes/UI/party_member_list.tscn" id="7_jk1pn"]
[ext_resource type="MeshLibrary" uid="uid://e6pmxlbnc8ha" path="res://Resources/gore_tilesset.tres" id="8_8inb8"]
[ext_resource type="Resource" uid="uid://bd27rwewnl5vv" path="res://Resources/Dialog2_7.tres" id="8_ajoww"]
[ext_resource type="PackedScene" uid="uid://d0rv7rqe4gg2t" path="res://Scenes/Environment/gore_wall.tscn" id="9_3ogmv"]
[ext_resource type="PackedScene" uid="uid://b67t360b7o1eb" path="res://Scenes/Environment/trigger.tscn" id="11_6o5t4"]
[ext_resource type="PackedScene" uid="uid://b6o6e3k2bn7r4" path="res://Scenes/Enemy/monster.tscn" id="15_uycca"]
[ext_resource type="PackedScene" uid="uid://bn03n7yxgpgln" path="res://Scenes/UI/game_over.tscn" id="16_pd1pl"]
[ext_resource type="PackedScene" uid="uid://2bcx7j6r8fym" path="res://Scenes/UI/dialogPanel.tscn" id="18_thefx"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6mi60"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_og8a5"]
sky_material = SubResource("ProceduralSkyMaterial_6mi60")

[sub_resource type="Environment" id="Environment_kbjqk"]
background_mode = 2
sky = SubResource("Sky_og8a5")
ambient_light_color = Color(0.894118, 0.592157, 0.360784, 1)
ambient_light_energy = 0.37
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.694118, 0, 0.27451, 1)
fog_light_energy = 0.14
fog_density = 0.2033
fog_height = 2.5
fog_height_density = 1.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.0

[sub_resource type="NavigationMesh" id="NavigationMesh_pr8ne"]
vertices = PackedVector3Array(-5, 1.5, -10.25, -4.75, 1.5, -6.75, -4.75, 1.5, -11, -5.5, 1.5, -10.75, -5, 1.5, -10.25, -4.75, 1.5, -11, -5.5, 1.5, -10.75, -4.75, 1.5, -11, -5.75, 1.5, -11, -8.75, 1.5, -14.25, -8.25, 1.5, -14.75, -9.5, 1.5, -14.75, -8.75, 1.5, -14.25, -9.5, 1.5, -14.75, -9, 1.5, -14.25, -8.25, 1.5, -10.75, -5.5, 1.5, -10.75, -5.75, 1.5, -11, -8.25, 1.5, -10.75, -5.75, 1.5, -11, -8.25, 1.5, -11, -8.25, 1.5, -10.75, -8.25, 1.5, -11, -8.75, 1.5, -11.5, -9.5, 1.5, -10.75, -8.25, 1.5, -10.75, -8.75, 1.5, -11.5, -8.75, 1.5, -14.25, -9, 1.5, -14.25, -9, 1.5, -11.75, -8.75, 1.5, -11.5, -8.75, 1.5, -14.25, -9, 1.5, -11.75, -9.5, 1.5, -10.75, -8.75, 1.5, -11.5, -9, 1.5, -11.75, -9.5, 1.5, -10.75, -9, 1.5, -11.75, -9.75, 1.5, -11, -9.5, 1.5, -10.75, -9.75, 1.5, -11, -12.25, 1.5, -11, -13, 1.5, -10.75, -9.5, 1.5, -10.75, -12.25, 1.5, -11, -13, 1.5, -10.75, -12.25, 1.5, -11, -12.75, 1.5, -11.5, -13, 1.5, -12.25, -13, 1.5, -10.75, -12.75, 1.5, -11.5, -13, 1.5, -12.25, -12.75, 1.5, -11.5, -12.75, 1.5, -13, -13.5, 1.5, -12.75, -13, 1.5, -12.25, -12.75, 1.5, -13, -13.5, 1.5, -12.75, -12.75, 1.5, -13, -13.75, 1.5, -13, -13.5, 1.5, -12.75, -13.75, 1.5, -13, -16.25, 1.5, -13, -17, 1.5, -12.75, -13.5, 1.5, -12.75, -16.25, 1.5, -13, -17, 1.5, -12.75, -16.25, 1.5, -13, -16.75, 1.5, -13.5, -17, 1.5, -18.25, -17, 1.5, -12.75, -16.75, 1.5, -13.5, -17, 1.5, -18.25, -16.75, 1.5, -13.5, -16.75, 1.5, -18.25, -17.5, 1.5, -18.75, -17, 1.5, -18.25, -16.75, 1.5, -18.25, -21, 1.5, -18.75, -20.25, 1.5, -18.75, -17.5, 1.5, -18.75, -17.5, 1.5, -18.75, -16.75, 1.5, -18.25, -16.25, 1.5, -18.75, -16.25, 1.5, -18.75, -9.5, 1.5, -18.75, -8.75, 1.5, -18.75, -16.25, 1.5, -18.75, -8.75, 1.5, -18.75, -21, 1.5, -18.75, -21, 1.5, -18.75, -17.5, 1.5, -18.75, -16.25, 1.5, -18.75, -20.75, 1.5, -18.25, -20.25, 1.5, -18.75, -21, 1.5, -18.75, -21.75, 1.5, -9, -23, 1.5, -9, -23, 1.5, -4.75, -18.75, 1.5, -4.75, -18.75, 1.5, -9, -20.25, 1.5, -9, -23, 1.5, -4.75, -18.75, 1.5, -4.75, -20.25, 1.5, -9, -21.75, 1.5, -9, -23, 1.5, -4.75, -20.25, 1.5, -9, -21.75, 1.5, -9, -20.25, 1.5, -9, -20.75, 1.5, -9.5, -21, 1.5, -9.75, -21.75, 1.5, -9, -20.75, 1.5, -9.5, -21, 1.5, -9.75, -20.75, 1.5, -9.5, -20.75, 1.5, -18.25, -21, 1.5, -18.75, -21, 1.5, -9.75, -20.75, 1.5, -18.25, -8.75, 1.5, -18.75, -9.5, 1.5, -18.75, -9, 1.5, -18.25, -5, 1.5, -11.75, -5.75, 1.5, -11, -4.75, 1.5, -11, -13, 1.5, -13.75, -13.75, 1.5, -13, -12.75, 1.5, -13, -13, 1.5, -13.75, -12.75, 1.5, -13, -12.75, 1.5, -14.25, -13, 1.5, -15, -13, 1.5, -13.75, -12.75, 1.5, -14.25, -13, 1.5, -15, -12.75, 1.5, -14.25, -12.25, 1.5, -14.75, -9.75, 1.5, -15, -13, 1.5, -15, -12.25, 1.5, -14.75, -9.75, 1.5, -15, -12.25, 1.5, -14.75, -9.5, 1.5, -14.75, -9, 1.5, -15.75, -9.75, 1.5, -15, -9.5, 1.5, -14.75, -9, 1.5, -15.75, -9.5, 1.5, -14.75, -8.25, 1.5, -14.75, -8.75, 1.5, -15.5, -8.75, 1.5, -18.75, -9, 1.5, -18.25, -8.75, 1.5, -15.5, -9, 1.5, -18.25, -9, 1.5, -15.75, -8.75, 1.5, -15.5, -9, 1.5, -15.75, -8.25, 1.5, -14.75, -8.25, 1.5, -15, -8.75, 1.5, -15.5, -8.25, 1.5, -14.75, -8.25, 1.5, -15, -8.25, 1.5, -14.75, -5.5, 1.5, -14.75, -4.75, 1.5, -15, -8.25, 1.5, -15, -5.5, 1.5, -14.75, -4.75, 1.5, -15, -5.5, 1.5, -14.75, -5, 1.5, -14.25, -5, 1.5, -14.25, -5, 1.5, -11.75, -4.75, 1.5, -11, -5, 1.5, -14.25, -4.75, 1.5, -11, -4.75, 1.5, -15, -1, 1.5, 3.75, -0.75, 1.5, 7, -0.75, 1.5, 3, -1.5, 1.5, 3.25, -1, 1.5, 3.75, -0.75, 1.5, 3, -1.5, 1.5, 3.25, -0.75, 1.5, 3, -2.25, 1.5, 3, -3, 1.5, 3.25, -1.5, 1.5, 3.25, -2.25, 1.5, 3, -3, 1.5, 3.25, -2.25, 1.5, 3, -2.75, 1.5, 2.5, -8.25, 1.5, -10.75, -9.5, 1.5, -10.75, -9, 1.5, -10.25, -8.75, 1.5, -10.25, -8.25, 1.5, -10.75, -9, 1.5, -10.25, -3, 1.5, -2.25, -3, 1.5, 3.25, -2.75, 1.5, 2.5, -3, 1.5, -2.25, -2.75, 1.5, 2.5, -2.75, 1.5, -2.25, -3.5, 1.5, -2.75, -3, 1.5, -2.25, -2.75, 1.5, -2.25, -3.5, 1.5, -2.75, -2.75, 1.5, -2.25, -2.25, 1.5, -2.75, -2.25, 1.5, -2.75, 3.25, 1.5, -3, -8.25, 1.5, -3, -3.5, 1.5, -2.75, -2.25, 1.5, -2.75, -8.25, 1.5, -3, -9, 1.5, -2.75, -3.5, 1.5, -2.75, -8.25, 1.5, -3, -9, 1.5, -2.75, -8.25, 1.5, -3, -8.75, 1.5, -3.5, -9, 1.5, -10.25, -9, 1.5, -2.75, -8.75, 1.5, -3.5, -9, 1.5, -10.25, -8.75, 1.5, -3.5, -8.75, 1.5, -10.25)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(14, 13, 12), PackedInt32Array(17, 16, 15), PackedInt32Array(20, 19, 18), PackedInt32Array(23, 22, 21), PackedInt32Array(25, 24, 26), PackedInt32Array(29, 28, 27), PackedInt32Array(32, 31, 30), PackedInt32Array(35, 34, 33), PackedInt32Array(38, 37, 36), PackedInt32Array(41, 40, 39), PackedInt32Array(44, 43, 42), PackedInt32Array(47, 46, 45), PackedInt32Array(48, 50, 49), PackedInt32Array(53, 52, 51), PackedInt32Array(56, 55, 54), PackedInt32Array(59, 58, 57), PackedInt32Array(62, 61, 60), PackedInt32Array(65, 64, 63), PackedInt32Array(68, 67, 66), PackedInt32Array(71, 70, 69), PackedInt32Array(74, 73, 72), PackedInt32Array(77, 76, 75), PackedInt32Array(80, 79, 78), PackedInt32Array(81, 83, 82), PackedInt32Array(86, 85, 84), PackedInt32Array(89, 88, 87), PackedInt32Array(92, 91, 90), PackedInt32Array(95, 94, 93), PackedInt32Array(98, 97, 96), PackedInt32Array(101, 100, 99), PackedInt32Array(104, 103, 102), PackedInt32Array(107, 106, 105), PackedInt32Array(110, 109, 108), PackedInt32Array(113, 112, 111), PackedInt32Array(116, 115, 114), PackedInt32Array(119, 118, 117), PackedInt32Array(122, 121, 120), PackedInt32Array(125, 124, 123), PackedInt32Array(128, 127, 126), PackedInt32Array(130, 129, 131), PackedInt32Array(132, 134, 133), PackedInt32Array(137, 136, 135), PackedInt32Array(140, 139, 138), PackedInt32Array(143, 142, 141), PackedInt32Array(146, 145, 144), PackedInt32Array(149, 148, 147), PackedInt32Array(152, 151, 150), PackedInt32Array(155, 154, 153), PackedInt32Array(158, 157, 156), PackedInt32Array(161, 160, 159), PackedInt32Array(164, 163, 162), PackedInt32Array(167, 166, 165), PackedInt32Array(170, 169, 168), PackedInt32Array(173, 172, 171), PackedInt32Array(176, 175, 174), PackedInt32Array(179, 178, 177), PackedInt32Array(182, 181, 180), PackedInt32Array(185, 184, 183), PackedInt32Array(186, 188, 187), PackedInt32Array(191, 190, 189), PackedInt32Array(194, 193, 192), PackedInt32Array(197, 196, 195), PackedInt32Array(200, 199, 198), PackedInt32Array(203, 202, 201), PackedInt32Array(206, 205, 204), PackedInt32Array(207, 209, 208), PackedInt32Array(211, 210, 212), PackedInt32Array(215, 214, 213), PackedInt32Array(218, 217, 216), PackedInt32Array(221, 220, 219), PackedInt32Array(224, 223, 222), PackedInt32Array(227, 226, 225)]
sample_partition_type = 1
geometry_parsed_geometry_type = 1
agent_height = 0.0
agent_radius = 0.7
region_min_size = 1.0
region_merge_size = 9.49
vertices_per_polygon = 3.0

[node name="LevelTwo" type="Node"]
script = ExtResource("1_s6q77")
dialogs = Array[ExtResource("2_p6fu4")]([ExtResource("2_qflm4"), ExtResource("3_1oyir"), ExtResource("4_oj4o2"), ExtResource("5_85ots"), ExtResource("6_rx32c"), ExtResource("7_hftt2"), ExtResource("8_ajoww")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kbjqk")

[node name="PixelateViewport" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="SubViewport" type="SubViewport" parent="PixelateViewport"]
handle_input_locally = false
size = Vector2i(240, 180)
render_target_update_mode = 4

[node name="Crawler" parent="PixelateViewport/SubViewport" instance=ExtResource("6_yor8s")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 1, -3)
top_level = true

[node name="PartyMemberList" parent="." instance=ExtResource("7_jk1pn")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -124.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Props" type="Node" parent="."]

[node name="FirstWall" parent="Props" instance=ExtResource("9_3ogmv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 1, -7)

[node name="SecondWall" parent="Props" instance=ExtResource("9_3ogmv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -17, 1, -19)

[node name="Portal" parent="Props" instance=ExtResource("5_17kw3")]
transform = Transform3D(0.712258, 0, 0, 0, 0.712258, 0, 0, 0, 0.712258, -21.0472, 1.81786, -5.29664)
visible = false

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_pr8ne")

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
mesh_library = ExtResource("8_8inb8")
data = {
"cells": PackedInt32Array(1, 65534, 0, 0, 65534, 2, 65535, 65534, 655362, 65534, 65534, 3, 65534, 65535, 1441794, 65534, 0, 1441794, 65534, 1, 655364, 65535, 1, 4, 65535, 2, 1441794, 65535, 3, 1441792, 65533, 65534, 2, 65532, 65534, 2, 65531, 65534, 655364, 65531, 65533, 1048578, 65531, 65532, 1048578, 65531, 65531, 1048578, 65530, 65530, 655362, 65532, 65530, 2, 65531, 65529, 1048578, 65533, 65530, 1441795, 65529, 65529, 1441795, 65529, 65530, 655364, 65533, 65528, 4, 65529, 65528, 1048580, 65531, 65526, 4, 65533, 65529, 1441794, 65533, 65531, 1441794, 65530, 65526, 2, 65529, 65526, 2, 65528, 65526, 2, 65528, 65529, 2, 65531, 65530, 1048577, 65533, 65532, 1441792, 65532, 65528, 2, 65530, 65528, 655362, 65531, 65528, 1, 65531, 65527, 1441794, 65527, 65529, 655364, 65527, 65526, 3, 65526, 65526, 2, 65527, 65528, 1441794, 65527, 65527, 1441794, 65525, 65526, 1048580, 65525, 65527, 1048578, 65525, 65528, 1048578, 65525, 65529, 1048578, 65525, 65530, 1048578, 65525, 65531, 1048581, 65525, 65532, 1048581, 65525, 65533, 655371, 65524, 65532, 1048587, 65526, 65532, 1441803, 65524, 65533, 655372, 65524, 65531, 1048588, 65526, 65531, 12, 65526, 65533, 1441804, 131062, 65533, 1441802, 131060, 65533, 655370, 131060, 65531, 1048586, 131062, 65531, 10, 131061, 65531, 7, 131062, 65532, 1441799, 131061, 65533, 655367, 131060, 65532, 1048583, 131061, 65532, 1048582)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="Enemies" type="Node" parent="."]

[node name="monster" parent="Enemies" instance=ExtResource("15_uycca")]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -3, 1.18245, 3)

[node name="monster2" parent="Enemies" instance=ExtResource("15_uycca")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -9, 1, -14.8976)

[node name="monster3" parent="Enemies" instance=ExtResource("15_uycca")]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, -21, 1, -15)

[node name="tenticle_one" parent="Enemies" instance=ExtResource("6_dbtem")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0.897764, 7)

[node name="tenticle_one2" parent="Enemies" instance=ExtResource("6_dbtem")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0.931447, -7)

[node name="tenticle_one3" parent="Enemies" instance=ExtResource("6_dbtem")]
transform = Transform3D(-1.7, 0, -2.56693e-07, 0, 1.7, 0, 2.56693e-07, 0, -1.7, -21, 1, -5)

[node name="Hitbox" parent="Enemies/tenticle_one3" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90735e-06, 1, 1.5301)

[node name="DialogContainer" parent="." instance=ExtResource("18_thefx")]

[node name="GameOver" parent="." instance=ExtResource("16_pd1pl")]

[node name="Triggers" type="Node" parent="."]

[node name="Trigger" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -3)

[node name="Trigger2" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.02103, 1, -0.90693)
triggerOnArea = 9

[node name="Trigger5" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.021, 1, -18.9069)

[node name="Trigger6" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.021, 1, -11.9069)
triggerOnArea = 9

[node name="Trigger4" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02103, 1, 5.09307)
triggerOnArea = 9

[node name="Trigger3" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.02103, 1, -5.90693)
triggerOnArea = 9

[node name="VictoryTrigger" parent="Triggers" instance=ExtResource("11_6o5t4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 1, -5)
top_level = true
visible = false

[connection signal="damage_recevied" from="PixelateViewport/SubViewport/Crawler" to="PartyMemberList" method="on_damage_received"]
[connection signal="AttackMade" from="PartyMemberList" to="PixelateViewport/SubViewport/Crawler" method="attack"]
[connection signal="GameOver" from="PartyMemberList" to="GameOver" method="on_game_over"]
[connection signal="Interact" from="PartyMemberList" to="PixelateViewport/SubViewport/Crawler" method="interact"]
[connection signal="tenticle_death" from="Enemies/tenticle_one" to="." method="_on_tenticle_one_tenticle_death"]
[connection signal="tenticle_death" from="Enemies/tenticle_one2" to="." method="_on_tenticle_one_2_tenticle_death"]
[connection signal="tenticle_death" from="Enemies/tenticle_one3" to="." method="_on_tenticle_one_3_tenticle_death"]
[connection signal="Triggered" from="Triggers/Trigger" to="." method="_on_trigger_triggered"]
[connection signal="Triggered" from="Triggers/Trigger2" to="." method="_on_trigger_2_triggered"]
[connection signal="Triggered" from="Triggers/Trigger5" to="." method="_on_trigger_5_triggered"]
[connection signal="Triggered" from="Triggers/Trigger6" to="." method="_on_trigger_6_triggered"]
[connection signal="Triggered" from="Triggers/Trigger4" to="." method="_on_trigger_4_triggered"]
[connection signal="Triggered" from="Triggers/Trigger3" to="." method="_on_trigger_3_triggered"]
[connection signal="Triggered" from="Triggers/VictoryTrigger" to="GameOver" method="on_game_victory"]

[editable path="Enemies/tenticle_one3"]
